--- a/design_analysis/TMAs_202009/TMP_Sm_FixA/surfaceDefinitions/surface_definitions.tex
+++ b/design_analysis/TMAs_202009/TMP_Sm_FixA/surfaceDefinitions/surface_definitions.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{booktabs}
 \usepackage{graphicx}
+\usepackage{hyperref}
 
 \title{TMP mirror definitions}
 \author{Patricio Gallardo}
@@ -56,7 +57,7 @@ Here the sum covers 36 elements which define a general order 5 polynomial. This 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.9\textwidth]{mirror_fp_rays.PNG}
-	\caption{TMP ray trace}
+	\caption{TMP ray trace rendered from a STEP file exported from the Zemax model for the TMP, see \url{https://github.com/patogallardo/zemax_tools/tree/master/design_analysis/TMAs_202009/TMP_Sm_FixA/step_files}}
 \end{figure}
 
 \end{document}
