added grouped camera design

--- a/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/surfaceDefinitions/Lens_surface_definitions_zernike.tex
+++ b/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/surfaceDefinitions/Lens_surface_definitions_zernike.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage[a4paper,margin=0.5in,landscape]{geometry}
+\usepackage[a4paper,margin=0.2in,landscape]{geometry}
 \usepackage{booktabs}
 
 \setlength{\tabcolsep}{2pt}
@@ -16,15 +16,15 @@
 \section*{Lens 1}
 
 \begin{table}[h]
-\tiny
+\scriptsize
 	\input{lensDef_L1/lens_definitions_L1_row1.tex}
 \end{table}
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L1/lens_definitions_L1_row2.tex}
 \end{table}
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L1/lens_definitions_L1_row3.tex}
 \end{table}
 
@@ -37,15 +37,15 @@ Biconic Zernike polynomial
 \section*{Lens 2}
 
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L2/lens_definitions_L2_row1.tex}
 \end{table}
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L2/lens_definitions_L2_row2.tex}
 \end{table}
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L2/lens_definitions_L2_row3.tex}
 \end{table}
 
@@ -57,15 +57,15 @@ Biconic Zernike polynomial
 \newpage
 \section*{Lens 3}
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L3/lens_definitions_L3_row1.tex}
 \end{table}
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L3/lens_definitions_L3_row2.tex}
 \end{table}
 \begin{table}[h]
-	\tiny
+	\scriptsize
 	\input{lensDef_L3/lens_definitions_L3_row3.tex}
 \end{table}
 
