--- a/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/sag_tables/L2_shape_table.tex
+++ b/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/sag_tables/L2_shape_table.tex
@@ -1,5 +1,6 @@
 \documentclass[convert={convertexe={magick.exe}}]{standalone}
 \usepackage{booktabs}
+\usepackage{cmbright}
 \begin{document}\begin{tabular}{lrrrrrrrrr}
 \toprule
 {} &  r=0 mm &  r=10 mm &  r=20 mm &  r=30 mm &  r=40 mm &  r=50 mm &  r=60 mm &  r=70 mm &  r=80 mm \\
