--- a/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/surface_definitions/lensDef_L1/lens_definitions_3rows_L1.tex
+++ b/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/surface_definitions/lensDef_L1/lens_definitions_3rows_L1.tex
@@ -1,4 +1,5 @@
 \documentclass[varwidth=\maxdimen, convert={convertexe={magick.exe}}]{standalone}
+\usepackage{cmbright}
 \usepackage{booktabs}
 \begin{document}
 \begin{tabular}{lrrrrrrr}
