--- a/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/surface_definitions/lensDef_L2/lens_definitions_3rows_L2.tex
+++ b/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/surface_definitions/lensDef_L2/lens_definitions_3rows_L2.tex
@@ -1,11 +1,12 @@
 \documentclass[varwidth=\maxdimen, convert={convertexe={magick.exe}}]{standalone}
+\usepackage{cmbright}
 \usepackage{booktabs}
 \begin{document}
 \begin{tabular}{lrrrrrrr}
 \toprule
        SurfType &      Radius &  Thickness &  Semi-Diameter &       Conic &    X Radius &     X Conic &  Norm Radius \\
 \midrule
-Biconic Zernike & -4.2193e+02 & 0.0000e+00 &     8.5000e+01 & -6.2760e+00 & -4.3229e+02 & -5.3555e+00 &   1.0000e+02 \\
+Biconic Zernike & -4.2193e+02 & 1.3144e+01 &     8.5000e+01 & -6.2760e+00 & -4.3229e+02 & -5.3555e+00 &   1.0000e+02 \\
 \bottomrule
 \end{tabular}
 
