--- a/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/surface_definitions/lensDef_L2/lens_definitions_table_L2.tex
+++ b/S4cam/CD_85cams/sideTubeConfigurations_4K/wedgeFiles/85Cams_biconics_poly/biconics_WITHPOLYNOMIALTERMS/CAD/surface_definitions/lensDef_L2/lens_definitions_table_L2.tex
@@ -1,11 +1,12 @@
 \documentclass[convert={convertexe={magick.exe}}]{standalone}
 \usepackage{booktabs}
+\usepackage{cmbright}
 \begin{document}
-\begin{tabular}{lrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr}
+\begin{tabular}{llllllllllllllllllllllllllllllllllllllll}
 \toprule
        SurfType &      Radius &  Thickness &  Semi-Diameter &       Conic &    X Radius &     X Conic &  Norm Radius &        X\textasciicircum 1 &         X\textasciicircum 2 &        X\textasciicircum 3 &        X\textasciicircum 4 &        X\textasciicircum 5 &         X\textasciicircum 6 &        X\textasciicircum 7 &        X\textasciicircum 8 &        X\textasciicircum 9 &       X\textasciicircum 10 &       X\textasciicircum 11 &        X\textasciicircum 12 &       X\textasciicircum 13 &       X\textasciicircum 14 &       X\textasciicircum 15 &       X\textasciicircum 16 &        Y\textasciicircum 1 &        Y\textasciicircum 2 &        Y\textasciicircum 3 &        Y\textasciicircum 4 &        Y\textasciicircum 5 &         Y\textasciicircum 6 &        Y\textasciicircum 7 &         Y\textasciicircum 8 &        Y\textasciicircum 9 &        Y\textasciicircum 10 &       Y\textasciicircum 11 &        Y\textasciicircum 12 &       Y\textasciicircum 13 &       Y\textasciicircum 14 &       Y\textasciicircum 15 &       Y\textasciicircum 16 \\
 \midrule
-Biconic Zernike & -4.2193e+02 & 0.0000e+00 &     8.5000e+01 & -6.2760e+00 & -4.3229e+02 & -5.3555e+00 &   1.0000e+02 & 0.0000e+00 & -7.0079e-08 & 0.0000e+00 & 3.8447e-11 & 0.0000e+00 & -1.6131e-13 & 0.0000e+00 & 5.6335e-21 & 0.0000e+00 & 4.4621e-25 & 0.0000e+00 & -3.9332e-26 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 2.3967e-06 & 0.0000e+00 & 3.2821e-11 & 0.0000e+00 & -5.2308e-15 & 0.0000e+00 & -1.2575e-18 & 0.0000e+00 & -2.3505e-22 & 0.0000e+00 & -3.9908e-26 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 \\
+Biconic Zernike & -4.2193e+02 & 1.3144e+01 &     8.5000e+01 & -6.2760e+00 & -4.3229e+02 & -5.3555e+00 &   1.0000e+02 & 0.0000e+00 & -7.0079e-08 & 0.0000e+00 & 3.8447e-11 & 0.0000e+00 & -1.6131e-13 & 0.0000e+00 & 5.6335e-21 & 0.0000e+00 & 4.4621e-25 & 0.0000e+00 & -3.9332e-26 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 2.3967e-06 & 0.0000e+00 & 3.2821e-11 & 0.0000e+00 & -5.2308e-15 & 0.0000e+00 & -1.2575e-18 & 0.0000e+00 & -2.3505e-22 & 0.0000e+00 & -3.9908e-26 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 & 0.0000e+00 \\
 \bottomrule
 \end{tabular}
 
