--- a/design_analysis/TMP_Mech_var10C_20210503/CAD/tex_tables/prime_shape_table.tex
+++ b/design_analysis/TMP_Mech_var10C_20210503/CAD/tex_tables/prime_shape_table.tex
@@ -3,7 +3,7 @@
 \usepackage{cmbright}
 \begin{document}\begin{tabular}{lrrrrrrrrr}
 \toprule
-{} &  Norm Radius &      X0Y1 &        X2Y0 &       X0Y2 &      X2Y1 &      X0Y3 &      X4Y0 &     X2Y2 &      X0Y4 \\
+\bf{M1} &  Norm Radius &      X0Y1 &        X2Y0 &       X0Y2 &      X2Y1 &      X0Y3 &      X4Y0 &     X2Y2 &      X0Y4 \\
 \midrule
 Value &       2500.0 & -4.965625 & -140.817072 & -116.10188 &  5.631232 &  4.105706 &  0.235829 &  0.09349 & -0.106915 \\
 \bottomrule
