--- a/design_analysis/TMP_Mech_var10C_20210503/CAD/prescription_formula/pri_sec.tex
+++ b/design_analysis/TMP_Mech_var10C_20210503/CAD/prescription_formula/pri_sec.tex
@@ -6,7 +6,7 @@
 $ z(x, y) = C_{X0Y1} \, \frac{y}{R} + 
 C_{X2Y0} \, (\frac{x}{R})^2 + 
 C_{X0Y2} \, (\frac{y}{R})^2 + 
-C_{X2Y1} \, (\frac{x}{R})^2y+ 
+C_{X2Y1} \, (\frac{x}{R})^2 \frac{y}{R}+ 
 C_{X0Y3} \, (\frac{y}{R})^3 + 
 C_{X4Y0} \, (\frac{x}{R})^4 + 
 C_{X2Y2} \, (\frac{x}{R})^2 (\frac{y}{R})^2 + 
