--- a/design_analysis/SPLAT_baseline_20210523/coordinate_definitions/tex/coordinate_defs.tex
+++ b/design_analysis/SPLAT_baseline_20210523/coordinate_definitions/tex/coordinate_defs.tex
@@ -79,4 +79,8 @@ coordinate systems.
 \newpage
 \includepdf[trim=0cm 0.38cm 0cm 0cm]{../step_files/sldw/Orientations_drawing.pdf}
 
+%\includepdf{../../../TMP_Mech_var10C_20210503/CAD/M1/sw/TMP_Mech_Var10C_M1.pdf}
+%\includepdf{../../../TMP_Mech_var10C_20210503/CAD/M2/sw/TMP_Mech_Var10C_M2.pdf}
+%\includepdf{../../../TMP_Mech_var10C_20210503/CAD/M3/sw/TMP_Mech_Var10C_M3.pdf}
+
 \end{document}
