--- a/S4cam/groupedCameras/TMP_baseline_fwd_beta1/coordinate_definitions/coordinate_definitions/tex/coordinate_defs.tex
+++ b/S4cam/groupedCameras/TMP_baseline_fwd_beta1/coordinate_definitions/coordinate_definitions/tex/coordinate_defs.tex
@@ -24,7 +24,7 @@ Table \ref{surfdeftable} shows the surface definitions for this design. Angle $\
 
 \begin{table}
 \begin{center}
-	\input{../SPLAT_base_plus_cryofrontplate/coordinate_sys_pos_rot_angles.tex}
+	\input{coordinate_sys_pos_rot_angles.tex}
 \end{center}
 
 \caption{Surface local coordinate system locations and rotations about the X axis for the TMA.}
@@ -47,13 +47,13 @@ coordinate systems.
 
 
 \begin{minipage}{0.45\linewidth}
-	\input{../SPLAT_base_plus_cryofrontplate/prime_rotmat.tex}
+	\input{prime_rotmat.tex}
 	\label{rot:prime}
 	\captionof{table}{Rotation matrix for the M1 local coordinate system.}
 \end{minipage}
 \begin{minipage}{0.45\linewidth}
 \begin{center}
-	\input{../SPLAT_base_plus_cryofrontplate/second_rotmat.tex}
+	\input{second_rotmat.tex}
 	\captionof{table}{Rotation matrix for the M2 local coordinate system.}
 	\label{rot:second}
 \end{center}
@@ -63,21 +63,21 @@ coordinate systems.
 
 \begin{minipage}{0.45\linewidth}
 \begin{center}
-	\input{../SPLAT_base_plus_cryofrontplate/tert_rotmat.tex}
+	\input{tert_rotmat.tex}
 	\captionof{table}{Rotation matrix for the M3 local coordinate system.}
 	\label{rot:tert}
 \end{center}
 \end{minipage}
 \begin{minipage}{0.45\linewidth}
 \begin{center}
-	\input{../SPLAT_base_plus_cryofrontplate/TMP_image_rotmat.tex}
+	\input{Image_rotmat.tex}
 	\captionof{table}{Rotation matrix for the image surface local coordinate system.}
 	\label{rot:img}
 \end{center}
 \end{minipage}
 
 \newpage
-\includepdf[trim=0cm 0.38cm 0cm 0cm]{../step_files/sldw/Orientations_drawing.pdf}
+%\includepdf[trim=0cm 0.38cm 0cm 0cm]{../step_files/sldw/Orientations_drawing.pdf}
 
 %\includepdf{../../../TMP_Mech_var10C_20210503/CAD/M1/sw/TMP_Mech_Var10C_M1.pdf}
 %\includepdf{../../../TMP_Mech_var10C_20210503/CAD/M2/sw/TMP_Mech_Var10C_M2.pdf}
