--- a/analytic_calculations/analytic psf.ipynb
+++ b/analytic_calculations/analytic psf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d1e8df7e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
    "id": "9f53fca2",
    "metadata": {},
    "source": [
-    "$$I(\\theta) = [\\frac {2  J_1(x)}{x}]^2$$\n",
+    "$$I(\\theta) = \\frac {(2  J_1(x))^2}{x^2}$$\n",
     "\n",
     "$$x = \\frac {2\\pi d_a \\sin{\\theta}}{2\\lambda}$$\n",
     "\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9bccdcf1",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c9208780",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "41ec7ce2",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4721ba0e",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "(0.0, 2.5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0a7aaced",
    "metadata": {
     "scrolled": false
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "85dc6349",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "31317662",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2c206ae1",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bc77995d",
    "metadata": {},
    "outputs": [],
